--- a/src/slices/Hero/hero.module.css
+++ b/src/slices/Hero/hero.module.css
@@ -28,6 +28,7 @@
 	margin: 0 auto 1.5rem;
 	line-height: 1.6;
 	color: #333;
+	
 }
 
 .button {
@@ -37,9 +38,9 @@
 	padding: 0.75rem 1.5rem;
 	text-decoration: none;
 	font-weight: bold;
-	border-radius: 4px;
 	width: fit-content;
 	margin: auto;
+	text-transform: uppercase;
 }
 
 .imageContainer {
@@ -53,6 +54,7 @@
 	/* height: auto; */
 	object-fit: cover;
 	aspect-ratio: 4 / 5;
+
 }
 
 /* ✅ Desktop layout */
@@ -60,7 +62,7 @@
 	.heroSection {
 		flex-direction: row;
 		text-align: left;
-		height: 70vh; /* 🔥 force une hauteur */
+		height: 75vh; /* 🔥 force une hauteur */
 	}
 
 	.textContainer {
