--- a/src/slices/Footer/footer.module.css
+++ b/src/slices/Footer/footer.module.css
@@ -4,7 +4,7 @@
 	padding: 2rem;
 	display: grid;
 	grid-template-rows: 1fr auto;
-	gap: 2rem;
+	gap: 6rem;
 }
 
 .topSection {
@@ -82,7 +82,7 @@
 
 .bottomSection {
 	display: grid;
-	grid-template-columns: 1fr auto;
+	grid-template-columns: 1fr 1fr 1fr;
 	align-items: center;
 	border-top: 1px solid #000;
 	padding-top: 1rem;
@@ -93,21 +93,28 @@
 
 .copyright {
 	font-weight: bold;
+	justify-self: start;
 }
 
-.footerLinks {
-	display: flex;
-	gap: 2rem;
-	flex-wrap: wrap;
-}
-
-.footerLinks a {
+.centerLink {
 	color: black;
 	text-decoration: none;
 	font-weight: 500;
+	justify-self: center;
 }
 
-.footerLinks a:hover {
+.centerLink:hover {
+	text-decoration: underline;
+}
+
+.rightLink {
+	color: black;
+	text-decoration: none;
+	font-weight: 500;
+	justify-self: end;
+}
+
+.rightLink:hover {
 	text-decoration: underline;
 }
 
@@ -139,7 +146,12 @@
 		gap: 1rem;
 	}
 
-	.footerLinks {
-		justify-content: center;
+	.copyright {
+		justify-self: center;
+	}
+
+	.centerLink,
+	.rightLink {
+		justify-self: center;
 	}
 }
