--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -40,7 +40,7 @@
 .pageTitle {
 	display: flex;
 	justify-content: center;
-	margin: 20px;
+	margin: 30px 0 20px;
 	text-transform: uppercase;
 	font-size: 2.55vw;
 	
