--- a/src/slices/InfoColumns/sengager.module.css
+++ b/src/slices/InfoColumns/sengager.module.css
@@ -5,24 +5,32 @@
 	text-align: center;
 }
 
+.card {
+	background-color: #111;
+	border-radius: 12px;
+	padding: 3rem 2rem;
+	max-width: 700px;
+	/* margin: 0 auto; */
+	box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+	text-align: left;
+}
+
 .title {
 	font-size: 1.5rem;
 	font-weight: bold;
-	margin-bottom: 3rem;
+	margin-bottom: 2rem;
 	text-transform: uppercase;
 	letter-spacing: 1px;
+	text-align: center;
 }
 
-.columns {
+.items {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
-	max-width: 700px;
-	margin: 0 auto;
 }
 
-.column {
+.item {
 	font-size: 1rem;
-	text-align: left;
 	line-height: 1.6;
 }
