--- a/src/app/article/[uid]/page.module.css
+++ b/src/app/article/[uid]/page.module.css
@@ -1,5 +1,5 @@
 .articleWrapper {
-  max-width: 1400px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -15,22 +15,26 @@
 
 .textBlock {
   margin-top: 2rem;
+    font-size: 1rem;
+
 }
 
 .title {
-  font-size: 1.75rem;
   font-weight: bold;
   margin-bottom: 1rem;
   text-transform: uppercase;
 }
 
 .description {
-  font-size: 0.85rem;
-  max-width: 650px;
-  margin: 0 auto;
+  font-size: 1rem;
+text-align: left;
   line-height: 1.6;
   color: #111;
-  padding-bottom: 100px;
+  padding:50px 50px 100px;
+}
+
+.description p{
+  padding-bottom: 10px;
 }
 
 .downloadBtn {
@@ -47,3 +51,15 @@
   font-size: 0.85rem;
   letter-spacing: 0.05em;
 }
+
+@media (min-width: 768px) {
+	.textBlock {
+    font-size: 1.5rem;
+
+}
+.description {
+ 
+  margin: 0 auto;
+
+}
+  }
