--- a/src/slices/AproposSection/apropos.module.css
+++ b/src/slices/AproposSection/apropos.module.css
@@ -1,17 +1,19 @@
 .section {
 	padding: 4rem 2rem;
-	background-color: #f9f9f7;
-	font-family: "Georgia", serif;
-	color: #111;
+	color: #000000;
 	line-height: 1.6;
+	
 }
 
 .header {
 	text-align: center;
 	margin-bottom: 3rem;
-	font-size: 1.8rem;
+		text-transform: uppercase;
 }
 
+.header {
+	font-size: 2rem;
+}
 .mainContent {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -52,4 +54,7 @@
 	.mainContent {
 		grid-template-columns: 1fr;
 	}
+	.header {
+	font-size: 1.2rem;
+}
 }
