--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,7 +37,7 @@
 }
 
 /* page.module.css */
-.global-page-title {
+.pageTitle {
 	display: flex;
 	justify-content: center;
 	margin: 30px 0 20px;
@@ -177,7 +177,27 @@ a.secondary {
 	}
 }
 
+/* 👇 INSÈRE ICI */
+@media (max-width: 855px) and (min-width: 768px) {
+  .pageTitle {
+    font-size: 2.4vw;
+    
+  }
+}
 
+@media  (max-width: 768px) {
+  .global-page-title {
+   display: none;
+    
+  }
+}
+
+@media  (min-width: 768px) {
+  .pageTitle {
+   padding-top: .7rem;
+    
+  }
+}
 @media (prefers-color-scheme: dark) {
 	.logo {
 		filter: invert();
