--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,7 @@ h1{
     text-transform: uppercase;
 	font-weight: bold;
 	text-align: center;
+	padding: 1.5rem 0;
 }
 
 @media (max-width: 855px) and (min-width: 768px) {
