--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -246,5 +246,16 @@ a.secondary {
 	}
 }
 
+.pageTitle h1{
+		font-size:1.813rem;
+		font-weight: bold;
+
+}
 
 
+@media screen and (min-width: 768px) {
+	
+	.pageTitle h1{
+		font-size: 3rem;
+}
+}
