--- a/src/slices/InfoColumns/sengager.module.css
+++ b/src/slices/InfoColumns/sengager.module.css
@@ -1,13 +1,12 @@
 .section {
 	color: white;
-	padding: 4rem 2rem;
 	text-align: center;
 }
 
 .card {
 	background-color: #111;
 	padding: 3rem 2rem;
-	max-width: 700px;
+	width: 30vw;
 	text-align: left;
 }
 
@@ -29,4 +28,10 @@
 .item {
 	font-size: 1rem;
 	line-height: 1.6;
+}
+
+@media screen and (max-width: 750px) {
+	.card {
+		width: 100%;
+	}
 }
