--- a/src/slices/GlossaireItem/glossaire-item.module.css
+++ b/src/slices/GlossaireItem/glossaire-item.module.css
@@ -3,7 +3,6 @@
 	min-height: 150px;
 	/* ajuste selon le contenu */
 	font-family: monospace;
-	border-top: 1px solid #000;
 	border-bottom: 1px solid #000;
 }
 
@@ -14,9 +13,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-size: 4rem;
+	font-size: 1rem;
 	font-weight: bold;
 	padding: 2rem;
+}
+
+.split-left h1{
+		margin-right: auto;
+
 }
 
 .split-right {
@@ -27,7 +31,7 @@
 	display: flex;
 	align-items: center;
 	border-left: 1px solid #000;
-	font-size: 1.2rem;
+	font-size: 1rem;
 
 	flex-wrap: wrap; /* permet le retour à la ligne */
 	overflow-wrap: break-word;
@@ -36,11 +40,17 @@
 
 @media screen and (max-width: 768px) {
 .split-left, .split-right{ 
-	padding: 0;
+	padding: 1rem;
 }
 
 .split-left{
 	font-size: 1rem
 }
 
+.split {
+	min-height: 100px;
+	
+
+
+}
 }
