--- a/src/slices/LegalInformation/mentionLegale.module.css
+++ b/src/slices/LegalInformation/mentionLegale.module.css
@@ -1,22 +1,13 @@
 .section {
 	color: rgb(0, 0, 0);
 	padding: 4rem 2rem;
-	display: flex;
 }
 
 .container {
 	display: grid;
-	grid-template-columns: 1fr 1fr; /* mobile: une colonne */
-	gap: 35rem;
+	grid-template-columns: 1fr; /* Mobile = 1 colonne */
+	gap: 4rem; /* ✅ Espace vertical entre heading et items */
 	margin: 0 20%;
-}
-
-/* Desktop : 2 colonnes – heading à gauche, items à droite */
-@media (min-width: 768px) {
-	.container {
-		grid-template-columns: 1fr 2fr;
-		align-items: start;
-	}
 }
 
 .heading {
@@ -40,4 +31,12 @@
 .value {
 	font-size: 1rem;
 	line-height: 1;
+}
+
+/* Desktop : 2 colonnes – heading à gauche, items à droite */
+@media (min-width: 768px) {
+	.container {
+		grid-template-columns: 4fr 2fr; /* ✅ desktop : 2 colonnes */
+		align-items: start;
+	}
 }
