--- a/src/slices/InfoColumns/sengager.module.css
+++ b/src/slices/InfoColumns/sengager.module.css
@@ -1,6 +1,15 @@
 .section {
 	color: white;
 	text-align: center;
+	display: flex;
+	
+}
+
+.card {
+	background-color: #111;
+	padding: 3rem 2rem;
+	width: 30vw;
+	text-align: left;
 }
 
 .title {
@@ -12,22 +21,19 @@
 	text-align: center;
 }
 
-/* Grid qui contient les cards */
-.cardGrid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-	gap: 2rem;
-	width: 100%;
-}
-
-/* Chaque card individuelle */
-.card {
-	background-color: #111;
-	text-align: left;
+.items {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
-	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-	padding: 2rem;
+	gap: 2rem;
+}
+
+.item {
+	font-size: 1rem;
+	line-height: 1.6;
+}
+
+@media screen and (max-width: 1240px){ 
+	.card {
+		width: 100%;
+	}
 }
