--- a/src/app/sengager/page.module.css
+++ b/src/app/sengager/page.module.css
@@ -1,6 +1,7 @@
 .container {
 	width: 100%;
 	margin: 0 auto;
+	padding: 2rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -8,22 +9,31 @@
 
 .title {
 	text-align: center;
-	font-size: 2.5rem;
 	font-weight: bold;
 	margin-bottom: 3rem;
+	font-size:.9rem;
+}
+
+
+
+@media screen and (min-width: 768px) {
+	
+	.title {
+		font-size: 1.5rem;
+}
 }
 
 /* Style pour aligner les "cards" en ligne */
 .cardContainer {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 2rem;
 	justify-content: center;
-	padding: 2rem;
 }
 
-@media screen and (max-width: 768px) {
-	.cardContainer {
-		flex-direction: column;
-		align-items: center;
+
+@media screen and (min-idth: 1240px) { 
+	.cardContainer{
+		flex-direction: column
 	}
 }
