--- a/src/slices/Hero/hero.module.css
+++ b/src/slices/Hero/hero.module.css
@@ -59,6 +59,10 @@
 
 }
 
+
+
+
+
 /* ✅ Desktop layout */
 @media (min-width: 768px) {
 	.heroSection {
@@ -73,6 +77,11 @@
 	margin:0 0 1rem;
 	text-transform: uppercase;
 }
+
+.image {
+  will-change: transform, filter;
+}
+
 
 	.textContainer {
 		flex: 1;
@@ -98,3 +107,6 @@
 		object-fit: cover;
 	}
 }
+
+
+
