--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,3 @@
-
-
 .page {
 	--gray-rgb: 0, 0, 0;
 	--gray-alpha-200: rgba(var(--gray-rgb), 0.08);
@@ -16,6 +14,7 @@
 	padding: 80px;
 	gap: 64px;
 	font-family: var(--font-geist-sans);
+	color: var(--foreground);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -34,6 +33,7 @@
 	flex-direction: column;
 	gap: 32px;
 	grid-row-start: 2;
+	color: var(--foreground);
 }
 
 /* page.module.css */
@@ -43,10 +43,8 @@
 	margin: 30px 0 20px;
 	text-transform: uppercase;
 	font-size: 2.55vw;
-	
+	color: var(--foreground);
 }
-
-
 
 .main ol {
 	font-family: var(--font-geist-mono);
@@ -56,6 +54,7 @@
 	line-height: 24px;
 	letter-spacing: -0.01em;
 	list-style-position: inside;
+	color: var(--foreground);
 }
 
 .main li:not(:last-of-type) {
@@ -68,6 +67,7 @@
 	padding: 2px 4px;
 	border-radius: 4px;
 	font-weight: 600;
+	color: var(--foreground);
 }
 
 .ctas {
@@ -104,25 +104,26 @@ a.primary {
 a.secondary {
 	border-color: var(--gray-alpha-200);
 	min-width: 158px;
+	color: var(--foreground);
 }
 
 .footer {
 	grid-row-start: 3;
 	display: flex;
 	gap: 24px;
+	color: var(--foreground);
 }
 
 .footer a {
 	display: flex;
 	align-items: center;
 	gap: 8px;
+	color: var(--foreground);
 }
 
 .footer img {
 	flex-shrink: 0;
 }
-
-
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -179,31 +180,28 @@ a.secondary {
 
 /* 👇 INSÈRE ICI */
 @media (max-width: 855px) and (min-width: 768px) {
-  .pageTitle {
-    font-size: 2.4vw;
-    
-  }
+	.pageTitle {
+		font-size: 2.4vw;
+	}
 }
 
-@media  (max-width: 768px) {
-  .global-page-title {
-   display: none;
-    
-  }
+@media (max-width: 768px) {
+	.global-page-title {
+		display: none;
+	}
 }
 
-@media  (min-width: 768px) {
-  .pageTitle {
-   padding-top: .7rem;
-    
-  }
+@media (min-width: 768px) {
+	.pageTitle {
+		padding-top: 0.7rem;
+	}
 }
+
 @media (prefers-color-scheme: dark) {
 	.logo {
 		filter: invert();
 	}
 }
-
 
 .articleList {
 	display: grid;
@@ -219,7 +217,7 @@ a.secondary {
 	flex-direction: column;
 	overflow: hidden;
 	text-decoration: none;
-	color: inherit;
+	color: var(--foreground);
 	height: 100%;
 }
 
@@ -234,7 +232,7 @@ a.secondary {
 .articleCard .title {
 	font-size: 1rem;
 	font-weight: bold;
-	padding: .5rem;
+	padding: 0.5rem;
 	text-align: left;
 	background-color: black;
 	color: white;
@@ -246,18 +244,14 @@ a.secondary {
 	}
 }
 
-.pageTitle h1{
-		font-size:1.813rem;
-		font-weight: bold;
-
+.pageTitle h1 {
+	font-size: 1.813rem;
+	font-weight: bold;
+	color: var(--foreground);
 }
-
 
 @media screen and (min-width: 768px) {
-	
-	.pageTitle h1{
+	.pageTitle h1 {
 		font-size: 3rem;
+	}
 }
-}
-
-
