--- a/src/slices/NavigationBar/page.module.css
+++ b/src/slices/NavigationBar/page.module.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	align-items: stretch;
 	padding: 0.5rem;
-	background-color: white;
+	/* background-color: white; */
 	border: 1px solid #ccc;
 	text-transform: uppercase;
 	font-weight: bold;
