--- a/src/slices/Hero/hero.module.css
+++ b/src/slices/Hero/hero.module.css
@@ -28,13 +28,12 @@
 	max-width: 600px;
 	margin: 0 auto 1.5rem;
 	line-height: 1.6;
-	color: #333;
 }
 
 .button {
 	display: inline-block;
 	background-color: #000;
-	/* color: #fff; */
+	color: #fff;
 	padding: 0.75rem 1.5rem;
 	text-decoration: none;
 	font-weight: bold;
