--- a/src/app/article/[uid]/page.module.css
+++ b/src/app/article/[uid]/page.module.css
@@ -28,11 +28,10 @@
 	font-size: 1rem;
 	text-align: left;
 	line-height: 1.6;
-	color: #111;
 }
 
 .description p {
-	padding-bottom: 10px;
+	padding-bottom: 2rem;
 }
 
 /* page.module.css */
