--- a/src/slices/Footer/footer.module.css
+++ b/src/slices/Footer/footer.module.css
@@ -72,11 +72,10 @@
 .socialIcons img {
 	width: 32px;
 	height: 32px;
-	background-color: #ffffff;
 }
 
-.socialIcons a:hover img {
-	background-color: #f0f0f0;
+.socialIcons img {
+	fill: white;
 }
 
 .bottomSection {
